--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             margin: 10px;
             padding: 20px;
             text-align: center;
-            width: 200px;
+            width: 150px;
         }
 
         .card img {
@@ -94,8 +94,8 @@
     <div class="card-container" id="cardContainer">
         <div class="card">
             <img src="https://via.placeholder.com/150" alt="Placeholder Image">
-            <h3>Card Title 1</h3>
-            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/toasty-dev/pissblox/main/solaris_bootstrapper.lua",true))()'>Copy Script</button>
+            <h3>Index Hub</h3>
+            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/IndexZHub/Loader/main/Loader"))()'>Copy Script</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/150" alt="Placeholder Image">
