--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
     </div>
     <div class="card-container" id="cardContainer">
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+            <img src="https://scriptblox.com/images/script_2712517-1719624616782.webp" alt="Placeholder Image">
             <h3>Index Hub</h3>
             <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/IndexZHub/Loader/main/Loader"))()'>Copy Script</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Placeholder Image">
-            <h3>Card Title 2</h3>
-            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/OtherScript/Script/main/Script", true))()'>Copy Script</button>
+            <img src="https://scriptblox.com/images/script_301549746-1719300818355.webp" alt="Placeholder Image">
+            <h3>Solaris</h3>
+            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/toasty-dev/pissblox/main/solaris_bootstrapper.lua",true))()'>Copy Script</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Placeholder Image">
-            <h3>Card Title 3</h3>
-            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/AnotherScript/Script/main/Script", true))()'>Copy Script</button>
+            <img src="https://scriptblox.com/images/script_6028585-1720091700464.webp" alt="Placeholder Image">
+            <h3>Unc Test</h3>
+            <button class="copy-btn" data-clipboard-text='loadstring(game:HttpGet("https://raw.githubusercontent.com/unified-naming-convention/NamingStandard/main/UNCCheckEnv.lua", true))()'>Copy Script</button>
         </div>
         <!-- Add more cards as needed -->
     </div>
